@@ -1,6 +1,6 @@
 Name: lssa
-Version: 0.1.0
-Date: 2012-07-28
+Version: 0.1.1
+Date: 2012-08-09
 Author: Ben Lewis <benjf5@gmail.com>
 Maintainer: Ben Lewis <benjf5@gmail.com>
 Title: Least squares spectral analysis
