@@ -26,13 +26,6 @@
 ## @seealso{lscomplex}
 ## @end deftypefn
 
-%!shared t, x, o, maxfreq
-%! maxfreq = 4 / ( 2 * pi );
-%! t = linspace(0,8);
-%! x = ( 2.*sin(maxfreq.*t) + 3.*sin((3/4)*maxfreq.*t) - 0.5 .* sin((1/4)*maxfreq.*t) - 0.2 .* cos(maxfreq .* t) + cos((1/4)*maxfreq.*t));
-%!assert(lsreal(t,x,maxfreq,2,2),[-1.68275915310663 + 4.70126183846743i, 1.93821553170889 + 4.95660209883437i, 4.38145452686697 + 2.14403733658600i, 5.27425332281147 - 0.73933440226597i],6e-14)
-%! #In the assert here, I've got an error bound large enough to catch individual system errors which would present no real issue.
-
 function transform = lsreal( t, x, omegamax, ncoeff, noctave)
   ## the R function runs the following command:
   ## nureal( double X, double Y, int min(X,Y), int ncoeff, int noctave, double omegamax, complex rp)
@@ -65,6 +58,22 @@ function transform = lsreal( t, x, omegamax, ncoeff, noctave)
     o = o .* od;
   endfor
   
-  ##  transform = rp;
-
 endfunction
+
+%!test
+%!shared t, x, o, maxfreq
+%! maxfreq = 4 / ( 2 * pi );
+%! t = linspace(0,8);
+%! x = ( 2 .* sin ( maxfreq .* t ) +
+%!       3 .* sin ( (3/4) * maxfreq .* t ) -
+%!       0.5 .* sin ( (1/4) * maxfreq .* t ) -
+%!       0.2 .* cos ( maxfreq .* t ) +
+%!       cos ( (1/4) * maxfreq .* t ) );
+%!assert (lsreal (t,x,maxfreq,2,2),
+%!  [-1.68275915310663 + 4.70126183846743i,
+%!    1.93821553170889 + 4.95660209883437i,
+%!    4.38145452686697 + 2.14403733658600i,
+%!    5.27425332281147 - 0.73933440226597i ],
+%!  5e-10)
+%! # In the assert here, I've got an error bound large enough to catch
+%! # individual system errors which would present no real issue. 
